datasource for MUNI added, deduplication enabled

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -8,3 +8,14 @@ fileSplitter = BinaryMarcFileSplitter.php
 recordXPath = //record
 oaiIDXPath = //record
 institution = MZK
+dedup = true
+
+[muni]
+type = marc
+url = http://aleph.mzk.cz/OAI
+format = muni
+fileSplitter = BinaryMarcFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = MUNI
+dedup = true
