added optional checking of record before storing

--- a/conf/datasources.ini.sample
+++ b/conf/datasources.ini.sample
@@ -51,8 +51,10 @@
 ; query = "WIN=INSTITUTE"
 ; verbose = false
 ; institution = MyInst
+; enableRecordCheck = true
 ;
 ; RecordManager settings:
+; enableRecordCheck     if true, every time record is about to be stored, method 'checkRecord' is called. If it returns true record is actually stored, otherwise is skipped  
 ; institution           The institution code mapped to the source (required)
 ; recordXPath           xpath expression used when loading records from a file to identify a single record (optional, e.g. //record)
 ; format                Record format in RecordManager
