--- a/conf/datasources.ini.sample
+++ b/conf/datasources.ini.sample
@@ -52,9 +52,11 @@
 ; verbose = false
 ; institution = MyInst
 ; enableRecordCheck = true
-;
+; inputEncoding = cp1250
+
 ; RecordManager settings:
-; enableRecordCheck     if true, every time record is about to be stored, method 'checkRecord' is called. If it returns true record is actually stored, otherwise is skipped  
+; enableRecordCheck     if true, every time record is about to be stored, method 'checkRecord' is called. If it returns true record is actually stored, otherwise is skipped 
+; inputEncoding			if set, this encoding is used as encoding of input records, default is utf-8 
 ; institution           The institution code mapped to the source (required)
 ; recordXPath           xpath expression used when loading records from a file to identify a single record (optional, e.g. //record)
 ; format                Record format in RecordManager
