added datasource settings for VNF and HIST

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -19,3 +19,109 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = MUNI
 dedup = true
+
+
+
+; VNF sources  -----------------
+[vnf_mkp]
+type = marc
+url = http://web2.mlp.cz/cgi/oai
+format = mkp
+recordXPath = //record
+oaiIDXPath = //record
+institution = MKP
+metadataPrefix = marc21
+set = audio
+dedup = true
+
+[vnf_nkp]
+type = marc
+url = http://aleph.nkp.cz/OAI
+format = vnf
+recordXPath = //record
+oaiIDXPath = //record
+institution = NKP
+metadataPrefix = marc21
+set = NKC-AUDIO
+dedup = true
+
+[vnf_mzk]
+type = marc
+url = http://aleph.mzk.cz/OAI
+format = mzk
+fileSplitter = BinaryMarcFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK
+dedup = true
+enableRecordCheck = true
+
+[vnf_cbvk]
+type = marc
+url = http://katalog.cbvk.cz/i2/i2.ws.oai.cls
+format = cbvk
+fileSplitter = BinaryMarcFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = CBVK
+dedup = true
+enableRecordCheck = false
+set = MZK2
+metadataPrefix = oai_marcxml
+
+; Historicke fondy ------------------
+[hist_mzk]
+type = marc
+url = http://aleph.mzk.cz/OAI
+format = mzk
+fileSplitter = BinaryMarcFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK
+dedup = false
+metadataPrefix = marc21
+set = MZK03-VDK
+
+[hist_cbvk]
+type = marc
+url = http://katalog.cbvk.cz/i2/i2.ws.oai.cls
+format = cbvk
+fileSplitter = BinaryMarcFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = CBVK
+dedup = true
+enableRecordCheck = false
+set = MZK
+metadataPrefix = oai_marcxml
+
+[hist_kkfb]
+type = marc
+format = kkfb
+fileSplitter = SingleXmlFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = KKFB
+dedup = true
+enableRecordCheck = false
+
+[hist_nm]
+type = marc21
+format = hist_nm
+recordXPath = //record
+oaiIDXPath = //record
+institution = NM
+dedup = true
+enableRecordCheck = false
+inputEncoding = cp1250
+fileSplitter = BinaryMarcFileSplitter.php
+
+[hist_knav]
+type = marc21
+format = knav
+recordXPath = //record
+oaiIDXPath = //record
+institution = KNAV
+dedup = true
+enableRecordCheck = false
+fileSplitter = BinaryMarcFileSplitter.php
