conspectus, autocomplete field for author and title, bib record created date in PortalMarcRecord

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -9,6 +9,7 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = MZK
 dedup = true
+category_txtF_mapping = conspectus_category.map
 
 [muni]
 type = marc
