--- a/conf/datasources.ini.sample
+++ b/conf/datasources.ini.sample
@@ -51,15 +51,8 @@
 ; query = "WIN=INSTITUTE"
 ; verbose = false
 ; institution = MyInst
-; enableRecordCheck = true
-; inputEncoding = cp1250
-; lineRecordLeader = LDR
-
+;
 ; RecordManager settings:
-; enableRecordCheck     If true, every time record is about to be stored, method 'checkRecord' is called. If it returns true record is actually stored, otherwise is skipped 
-; inputEncoding         If set, this encoding is used as encoding of input records, default is utf-8 
-; lineRecordLeader      If LineRecordFileSplitter is used, this leader will be used as record separator
-; translateLang         If true, language shortcut will be translated to full form during solr updating
 ; institution           The institution code mapped to the source (required)
 ; recordXPath           xpath expression used when loading records from a file to identify a single record (optional, e.g. //record)
 ; format                Record format in RecordManager
@@ -81,16 +74,43 @@
 ;                         institution          Add the institution code (default)
 ;                         source               Add the source id
 ;                         driver               Add whatever the driver returns in the institution field
-;                         none                 Don't add a top level
+;                         "none"               Don't add a top level. Note that due to PHP ini file handling, the quotes are required.
+;                         institution/source   Use institution and source id separated with a slash
 ; extrafields[]         An array of extra fields added to each record from this data source when sending records to Solr.
 ;                       Use format fieldname:contents, e.g.
-;                         extrafields[] = sector:library   
+;                         extrafields[] = sector_str_mv:library   
 
 ; OAI-PMH Provider Specific settings:
 ; transformation_to_{fmt}
 ;                       XSL Transformation used to convert records from the original format to the requested format. E.g. if records are stored in MARC format, 
 ;                       transformation_to_ese=marc2ese.properties could be used to transform the MARC records to ESE format.                            
-
+;
+;
+; enableRecordCheck     If true, every time record is about to be stored, method 'checkRecord' is called. If it returns true record is actually stored, otherwise is skipped 
+; inputEncoding         If set, this encoding is used as encoding of input records, default is utf-8 
+; lineRecordLeader      If LineRecordFileSplitter is used, this leader will be used as record separator
+; recordTag				Name of starting element of record in XML format, required if SAXFilleSplitter is used.
+; 
+; fileSplitter         choice of fileSplitter    implementation that will be used for input file, possible values:
+;                      SAXFileSplitter           file splitter for MARC records in XML, uses SAX parsing
+;                        recordTag		         name of record starting element (required)
+;
+;                      BinaryMarcFileSplitter    file splitter for MARC records in ISO 2709 format
+;						  
+;                      LineMarcFileSplitter      file splitter for MARC records in line MARC format
+;                        lineRecordLeader         name of leader of record (optional). This option overrides leader autodetection.
+;						    
+;                      AutoDetectFileSplitter    this implementation automaticly chooses one of previously presented file splitters suitable for given file.
+;						  
+;                      EncodingDetectFileSplitter provides same funcionality as AutoDetectFileSplitter + probabilistically detects encoding of input file and converts records to UTF-8
+;                        inputLanguage            hint for encoding detection (recommended)            
+;                                                 NOTE: if 'inputEncoding' option is set, it overrides encoding detection of this file splitter
+;                                                 NOTE: this implementation depends on external library ENCA (http://freecode.com/projects/enca) and is Linux specific.
+;					    
+;                         
+;
+;
+;
 ; SAMPLE CONFIGURATION FOR OPEN JOURNAL SYSTEMS
 ;[OJS]
 ;institution=SampleInstitution
@@ -137,6 +157,9 @@ format = ead
 preTransformation = strip_namespaces.xsl
 oaipmhTransformation = strip_namespaces.xsl
 format_mapping = ead_level_to_format.map
+non_inherited_fields[] = physdesc
+prepend_title_with_subtitle = true
+prepend_parent_title_with_unitid = true
 recordXPath = //ead
 oaiIDXPath = ../../header/identifier
 
