--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -1,67 +1,85 @@
 ; datasources.ini -- Data source settings
-;
-[mzk]
+
+;----------------- cistbrno sources -----------------
+
+[portal_mzk]
 type = marc
 url = http://aleph.mzk.cz/OAI
-format = mzk
-fileSplitter = BinaryMarcFileSplitter.php
+format = portal_mzk
+fileSplitter = AutoDetectFileSplitter.php
 recordXPath = //record
 oaiIDXPath = //record
 institution = MZK
 dedup = true
-category_txtF_mapping = conspectus_category.map
+translateLang = true
 
-[muni]
+[portal_muni]
 type = marc
-url = http://aleph.mzk.cz/OAI
-format = muni
-fileSplitter = BinaryMarcFileSplitter.php
+format = portal_muni
+fileSplitter = AutoDetectFileSplitter.php
 recordXPath = //record
 oaiIDXPath = //record
 institution = MUNI
 dedup = true
+translateLang = true
+
+[portal_kjm]
+type = marc
+format = portal_kjm
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = KJM
+dedup = true
+translateLang = true
 
 
+;----------------- VNF sources -----------------
 
-; VNF sources  -----------------
 [vnf_mkp]
 type = marc
 url = http://web2.mlp.cz/cgi/oai
-format = mkp
+format = vnf_mkp
 recordXPath = //record
 oaiIDXPath = //record
 institution = MKP
 metadataPrefix = marc21
 set = audio
 dedup = true
+translateLang = true
+
 
 [vnf_nkp]
 type = marc
 url = http://aleph.nkp.cz/OAI
-format = vnf
+format = vnf_nkp
 recordXPath = //record
 oaiIDXPath = //record
 institution = NKP
 metadataPrefix = marc21
 set = NKC-AUDIO
 dedup = true
+translateLang = true
+
 
 [vnf_mzk]
 type = marc
 url = http://aleph.mzk.cz/OAI
-format = mzk
+format = vnf_mzk
 fileSplitter = BinaryMarcFileSplitter.php
 recordXPath = //record
 oaiIDXPath = //record
 institution = MZK
 dedup = true
 enableRecordCheck = true
+translateLang = true
 
 [vnf_cbvk]
 type = marc
 url = http://katalog.cbvk.cz/i2/i2.ws.oai.cls
-format = cbvk
-fileSplitter = BinaryMarcFileSplitter.php
+format = vnf_cbvk
+recordTag = record
+fileSplitter = AutoDetectFileSplitter.php
 recordXPath = //record
 oaiIDXPath = //record
 institution = CBVK
@@ -69,12 +87,26 @@ dedup = true
 enableRecordCheck = false
 set = MZK2
 metadataPrefix = oai_marcxml
+translateLang = true
 
-; Historicke fondy ------------------
+
+[vnf_ktn]
+type = marc21
+format = vnf_ktn
+recordXPath = //record
+oaiIDXPath = //record
+institution = KTN
+dedup = true
+enableRecordCheck = false
+fileSplitter = EncodingDetectFileSplitter.php
+inputLanguage = czech
+translateLang = true
+
+;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
 url = http://aleph.mzk.cz/OAI
-format = mzk
+format = hist_mzk
 fileSplitter = BinaryMarcFileSplitter.php
 recordXPath = //record
 oaiIDXPath = //record
@@ -86,24 +118,23 @@ set = MZK03-VDK
 [hist_cbvk]
 type = marc
 url = http://katalog.cbvk.cz/i2/i2.ws.oai.cls
-format = cbvk
-fileSplitter = BinaryMarcFileSplitter.php
+format = hist_cbvk
+;fileSplitter = BinaryMarcFileSplitter.php
 recordXPath = //record
 oaiIDXPath = //record
 institution = CBVK
-dedup = true
+dedup = false
 enableRecordCheck = false
-set = MZK
 metadataPrefix = oai_marcxml
 
 [hist_kkfb]
 type = marc
-format = kkfb
+format = hist_kkfb
 fileSplitter = SingleXmlFileSplitter.php
 recordXPath = //record
 oaiIDXPath = //record
 institution = KKFB
-dedup = true
+dedup = false
 enableRecordCheck = false
 
 [hist_nm]
@@ -114,15 +145,42 @@ oaiIDXPath = //record
 institution = NM
 dedup = true
 enableRecordCheck = false
-inputEncoding = cp1250
-fileSplitter = BinaryMarcFileSplitter.php
+inputLanguage = czech
+fileSplitter = EncodingDetectFileSplitter.php
+
 
 [hist_knav]
 type = marc21
-format = knav
+format = hist_knav
 recordXPath = //record
 oaiIDXPath = //record
 institution = KNAV
 dedup = true
 enableRecordCheck = false
 fileSplitter = BinaryMarcFileSplitter.php
+
+
+
+;----------------- testing purposes -----------------
+[mzk]
+type = marc
+url = http://aleph.mzk.cz/OAI
+format = mzk
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK
+dedup = true
+
+[muni]
+type = marc
+url = http://aleph.mzk.cz/OAI
+format = muni
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = MUNI
+dedup = true
+translateLang = true
+
