--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -172,6 +172,8 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = MZK
 dedup = true
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
 
 [muni]
 type = marc
@@ -183,4 +185,5 @@ oaiIDXPath = //record
 institution = MUNI
 dedup = true
 translateLang = true
-
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
