local costumizations for format detection

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -173,6 +173,7 @@ oaiIDXPath = //record
 institution = MZK
 dedup = true
 language_mapping = mzk_language.map
+format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 
 [muni]
@@ -186,4 +187,5 @@ institution = MUNI
 dedup = true
 translateLang = true
 language_mapping = mzk_language.map
+format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
