use sysno as primary id

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -33,6 +33,15 @@ institution = KJM
 dedup = true
 translateLang = true
 
+[portal_vut]
+type = marc
+format = portal_vut
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = VUT
+dedup = true
+translateLang = true
 
 ;----------------- VNF sources -----------------
 
