--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -11,7 +11,6 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = MZK
 dedup = true
-translateLang = true
 
 [portal_muni]
 type = marc
@@ -21,7 +20,6 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = MUNI
 dedup = true
-translateLang = true
 
 [portal_kjm]
 type = marc
@@ -31,7 +29,6 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = KJM
 dedup = true
-translateLang = true
 
 [portal_vut]
 type = marc
@@ -41,7 +38,16 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = VUT
 dedup = true
-translateLang = true
+
+[portal_mend]
+type = marc
+format = portal_mend
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = MEND
+dedup = true
+recordTag = record
 
 ;----------------- VNF sources -----------------
 
@@ -55,7 +61,6 @@ institution = MKP
 metadataPrefix = marc21
 set = audio
 dedup = true
-translateLang = true
 
 
 [vnf_nkp]
@@ -68,7 +73,6 @@ institution = NKP
 metadataPrefix = marc21
 set = NKC-AUDIO
 dedup = true
-translateLang = true
 
 
 [vnf_mzk]
@@ -81,7 +85,6 @@ oaiIDXPath = //record
 institution = MZK
 dedup = true
 enableRecordCheck = true
-translateLang = true
 
 [vnf_cbvk]
 type = marc
@@ -96,7 +99,6 @@ dedup = true
 enableRecordCheck = false
 set = MZK2
 metadataPrefix = oai_marcxml
-translateLang = true
 
 
 [vnf_ktn]
@@ -109,7 +111,6 @@ dedup = true
 enableRecordCheck = false
 fileSplitter = EncodingDetectFileSplitter.php
 inputLanguage = czech
-translateLang = true
 
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
@@ -168,7 +169,15 @@ dedup = true
 enableRecordCheck = false
 fileSplitter = BinaryMarcFileSplitter.php
 
-
+[hist_mas]
+type = marc21
+format = hist_mas
+recordXPath = //record
+oaiIDXPath = //record
+institution = MAS
+dedup = true
+enableRecordCheck = false
+fileSplitter = AutoDetectFileSplitter.php
 
 ;----------------- testing purposes -----------------
 [mzk]
@@ -194,7 +203,6 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = MUNI
 dedup = true
-translateLang = true
 language_mapping = mzk_language.map
 format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
