--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -11,6 +11,11 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = MZK
 dedup = true
+idPrefix = mzk
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
+
 
 [portal_muni]
 type = marc
@@ -20,6 +25,11 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = MUNI
 dedup = true
+idPrefix = muni
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
+
 
 [portal_kjm]
 type = marc
@@ -29,6 +39,11 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = KJM
 dedup = true
+idPrefix = kjm
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
+
 
 [portal_vut]
 type = marc
@@ -38,16 +53,26 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = VUT
 dedup = true
+idPrefix = vut
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [portal_mend]
 type = marc
 format = portal_mend
 fileSplitter = AutoDetectFileSplitter.php
+url = http://oai_provider.mendelu.cz/oai/index.php
+set = cpkb
 recordXPath = //record
 oaiIDXPath = //record
 institution = MEND
 dedup = true
+idPrefix = mend
 recordTag = record
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 ;----------------- VNF sources -----------------
 
@@ -111,6 +136,22 @@ dedup = true
 enableRecordCheck = false
 fileSplitter = EncodingDetectFileSplitter.php
 inputLanguage = czech
+
+
+[vnf_vkol]
+type = marc
+url = http://aleph.vkol.cz/OAI
+format = vnf_vkol
+recordTag = record
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = VKOL
+dedup = true
+enableRecordCheck = false
+set = VKOLOAI
+metadataPrefix = marc21
+
 
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
@@ -178,6 +219,16 @@ institution = MAS
 dedup = true
 enableRecordCheck = false
 fileSplitter = AutoDetectFileSplitter.php
+
+[hist_mkp]
+type = marc
+url = http://web2.mlp.cz/cgi/oai
+format = hist_mkp
+recordXPath = //record
+oaiIDXPath = //record
+institution = MKP
+metadataPrefix = marc21
+set = early
 
 ;----------------- testing purposes -----------------
 [mzk]
