--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -230,6 +230,17 @@ institution = MKP
 metadataPrefix = marc21
 set = early
 
+[hist_mas]
+type = marc
+url = http://web2.mlp.cz/cgi/oai
+format = hist_mas
+recordXPath = //record
+oaiIDXPath = //record
+institution = MAS
+metadataPrefix = marc21
+fileSplitter = AutoDetectFileSplitter.php
+idPrefix = mas
+
 ;----------------- testing purposes -----------------
 [mzk]
 type = marc
