--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -30,7 +30,6 @@ language_mapping = mzk_language.map
 format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 
-
 [portal_kjm]
 type = marc
 format = portal_kjm
@@ -164,7 +163,7 @@ oaiIDXPath = //record
 institution = MZK
 dedup = false
 metadataPrefix = marc21
-set = MZK03-VDK
+set = MZK03-CPK
 
 [hist_cbvk]
 type = marc
@@ -177,6 +176,7 @@ institution = CBVK
 dedup = false
 enableRecordCheck = false
 metadataPrefix = oai_marcxml
+set = MZK
 
 [hist_kkfb]
 type = marc
@@ -209,16 +209,6 @@ institution = KNAV
 dedup = true
 enableRecordCheck = false
 fileSplitter = BinaryMarcFileSplitter.php
-
-[hist_mas]
-type = marc21
-format = hist_mas
-recordXPath = //record
-oaiIDXPath = //record
-institution = MAS
-dedup = true
-enableRecordCheck = false
-fileSplitter = AutoDetectFileSplitter.php
 
 [hist_mkp]
 type = marc
