added Supraphon datasource

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -151,7 +151,16 @@ enableRecordCheck = false
 set = VKOLOAI
 metadataPrefix = marc21
 
-
+[vnf_sup]
+type = marc21
+format = vnf_sup
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = SUP
+dedup = true
+enableRecordCheck = false
+lineRecordLeader = LDR
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
