--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -180,10 +180,41 @@ enableRecordCheck = false
 fileSplitter = AutoDetectFileSplitter.php
 
 ;----------------- testing purposes -----------------
-[mzk]
+[mzk_01]
 type = marc
 url = http://aleph.mzk.cz/OAI
 format = mzk
+idPrefix = MZK01-
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK
+dedup = true
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
+
+[mzk_03]
+type = marc
+url = http://aleph.mzk.cz/OAI
+format = mzk
+idPrefix = MZK03-
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK
+dedup = true
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
+
+[mzk_04]
+type = marc
+url = http://aleph.mzk.cz/OAI
+format = mzk
+idPrefix = MZK04-
 fileSplitter = AutoDetectFileSplitter.php
 recordTag = record
 recordXPath = //record
