visibility and second call number

--- a/marc_mapping/mzk_marc.properties
+++ b/marc_mapping/mzk_marc.properties
@@ -7,12 +7,12 @@ publishDate = script(second_run.bsh), getPublishDate
 #itemlink = script(second_run.bsh), getItemLink
 #created = custom, getCreated()
 title_short = custom, getTitleShort()
-#mzk_visible_str_ns = script(second_run.bsh), getVisible
+mzk_visible_str = custom, getVisible()
 fulltext = custom, getFullText()
 topic = custom, getKeywords()
 #relevancy = script(second_run.bsh), getRelevancy
 #scale_int_mv = script(second_run.bsh), getScale
-#callnumber_second = custom, getSecondCallNumber()
+callnumber_second_str_mv = custom, getSecondCallNumbers()
 #geo = script(georef.bsh), getBoundingBox
 #source = "MZK"
 nbn = 015a, first
