mapping for MZK - finalization

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -244,6 +244,9 @@ idPrefix = mas
 [mzk_01]
 type = marc
 url = http://aleph.mzk.cz/OAI
+repository_name = MZK01-OAITEST
+set = MZK01-OAITEST
+metadataPrefix = marc21
 format = mzk
 idPrefix = MZK01-
 fileSplitter = AutoDetectFileSplitter.php
@@ -252,9 +255,11 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = MZK
 dedup = true
-language_mapping = mzk_language.map
-format_mapping = mzk_format.map
-category_txtF_mapping = conspectus_category.map
+base = MZK01
+;language_mapping = mzk_language.map
+;format_mapping = mzk_format.map
+;category_txtF_mapping = conspectus_category.map
+indexer_properties = mzk_marc.properties, marc.properties
 
 [mzk_03]
 type = marc
