--- a/marc_mapping/mzk_marc.properties
+++ b/marc_mapping/mzk_marc.properties
@@ -5,23 +5,22 @@ publishDate_txt_mv = custom, getPublishDate()
 # TODO: make it copy field
 publishDate = script(second_run.bsh), getPublishDate
 #itemlink = script(second_run.bsh), getItemLink
-#created = custom, getCreated()
 title_short = custom, getTitleShort()
 mzk_visible_str = custom, getVisible()
 fulltext = custom, getFullText()
 topic = custom, getKeywords()
-#relevancy = script(second_run.bsh), getRelevancy
-#scale_int_mv = script(second_run.bsh), getScale
+relevancy_str = custom, getRelevancy()
+scale_int_mv = custom, getScale()
 callnumber_second_str_mv = custom, getSecondCallNumbers()
-#geo = script(georef.bsh), getBoundingBox
-#source = "MZK"
+geo = custom, getBoundingBox
+source = "MZK"
 nbn = 015a, first
-#acq_int = script(second_run.bsh), getAcquisitionDate
+acq_int = custom, getAcquisitionDate()
 category_txtF = custom, getConspectusCategory(), conspectus_categories_map.properties
 subcategory_txtF = custom, getConspectusSubcategory()
-#base_txtF_mv = script(second_run.bsh), getBases
+base_txtF_mv = custom, getBases()
 barcode_str_mv = 996b
-#sysno = script(second_run.bsh), getSysno
-#publishDate = script(second_run.bsh), getPublishDate
-#author_title_Str = script(second_run.bsh), getAuthorAndTitle
+sysno_str = custom, getSysno()
+publishDate = custom, getPublishDate()
+author_title_str = custom, getAuthorAndTitle()
 udc_str_mv = 080a
