--- a/marc_mapping/mzk_marc.properties
+++ b/marc_mapping/mzk_marc.properties
@@ -1,5 +1,6 @@
 availability_id_str = 996w, first
 statuses = custom, getStatuses()
+format = custom, getFormat(), mzk_format_map.properties
 # is it used?
 publishDate_txt_mv = custom, getPublishDate()
 # TODO: make it copy field
