updated VNF datasources mapping

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -85,7 +85,9 @@ institution = MKP
 metadataPrefix = marc21
 set = audio
 dedup = true
-
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [vnf_nkp]
 type = marc
@@ -97,7 +99,9 @@ institution = NKP
 metadataPrefix = marc21
 set = NKC-AUDIO
 dedup = true
-
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [vnf_mzk]
 type = marc
@@ -109,6 +113,9 @@ oaiIDXPath = //record
 institution = MZK
 dedup = true
 enableRecordCheck = true
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [vnf_cbvk]
 type = marc
@@ -123,7 +130,9 @@ dedup = true
 enableRecordCheck = false
 set = MZK2
 metadataPrefix = oai_marcxml
-
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [vnf_ktn]
 type = marc21
@@ -135,6 +144,9 @@ dedup = true
 enableRecordCheck = false
 fileSplitter = EncodingDetectFileSplitter.php
 inputLanguage = czech
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 
 [vnf_vkol]
@@ -150,6 +162,9 @@ dedup = true
 enableRecordCheck = false
 set = VKOLOAI
 metadataPrefix = marc21
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [vnf_sup]
 type = marc21
@@ -161,6 +176,11 @@ institution = SUP
 dedup = true
 enableRecordCheck = false
 lineRecordLeader = LDR
+labelsDirectory = /data/supraphon-obalky
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
@@ -286,9 +306,23 @@ language_mapping = mzk_language.map
 format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 
+[mkt]
+type = marc
+url = http://www.vkta.cz/carmentest/l.dll
+format = mkt
+idPrefix = MKT
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MKT
+metadataPrefix = marc21
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
+
 [muni]
 type = marc
-url = http://aleph.mzk.cz/OAI
 format = muni
 fileSplitter = AutoDetectFileSplitter.php
 recordXPath = //record
