added Kkfb marc record class to VNF

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -181,6 +181,19 @@ language_mapping = mzk_language.map
 format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_kkfb]
+type = marc21
+format = vnf_kkfb
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = KKFB
+dedup = true
+enableRecordCheck = false
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
