datasources configuration updated for MZK OAI

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -240,12 +240,13 @@ metadataPrefix = marc21
 fileSplitter = AutoDetectFileSplitter.php
 idPrefix = mas
 
-;----------------- testing purposes -----------------
-[mzk_01]
+;----------------- MZK -----------------
+;Main bibliographical base
+[MZK01-VDK]
 type = marc
 url = http://aleph.mzk.cz/OAI
-repository_name = MZK01-OAITEST
-set = MZK01-OAITEST
+repository_name = MZK01-VDK
+set = MZK01-VDK
 metadataPrefix = marc21
 format = mzk
 idPrefix = MZK01-
@@ -256,14 +257,33 @@ oaiIDXPath = //record
 institution = MZK
 dedup = true
 base = MZK01
-;language_mapping = mzk_language.map
-;format_mapping = mzk_format.map
-;category_txtF_mapping = conspectus_category.map
 indexer_properties = mzk_marc.properties, marc.properties
 
-[mzk_03]
+; hidden items
+[MZK01-VUFIND]
 type = marc
 url = http://aleph.mzk.cz/OAI
+repository_name = MZK01-VUFIND
+set = MZK01-VUFIND
+metadataPrefix = marc21
+format = mzk
+idPrefix = MZK01-
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK
+dedup = true
+base = MZK01
+indexer_properties = mzk_marc.properties, marc.properties
+
+; historical collections
+[MZK03-VDK]
+type = marc
+url = http://aleph.mzk.cz/OAI
+repository_name = MZK03-VDK
+set = MZK03-VDK
+metadataPrefix = marc21
 format = mzk
 idPrefix = MZK03-
 fileSplitter = AutoDetectFileSplitter.php
@@ -272,14 +292,89 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = MZK
 dedup = true
-language_mapping = mzk_language.map
-format_mapping = mzk_format.map
-category_txtF_mapping = conspectus_category.map
+base = MZK03
+indexer_properties = mzk_marc.properties, marc.properties
 
-[mzk_04]
+; historical collection from Rajhrad
+[MZK03-RAJHRAD]
 type = marc
 url = http://aleph.mzk.cz/OAI
+repository_name = MZK03-RAJHRAD
+set = MZK03-RAJHRAD
+metadataPrefix = marc21
 format = mzk
+idPrefix = MZK03-
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK
+dedup = true
+base = MZK03
+indexer_properties = mzk_marc.properties, marc.properties
+
+; historical collection from Dacice
+[MZK03-DACICE]
+type = marc
+url = http://aleph.mzk.cz/OAI
+repository_name = MZK03-DACICE
+set = MZK03-DACICE
+metadataPrefix = marc21
+format = mzk
+idPrefix = MZK03-
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK
+dedup = true
+base = MZK03
+indexer_properties = mzk_marc.properties, marc.properties
+
+; historical collection from Dacice
+[MZK03-ZNOJMO]
+type = marc
+url = http://aleph.mzk.cz/OAI
+repository_name = MZK03-ZNOJMO
+set = MZK03-ZNOJMO
+metadataPrefix = marc21
+format = mzk
+idPrefix = MZK03-
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK
+dedup = true
+base = MZK03
+indexer_properties = mzk_marc.properties, marc.properties
+
+; historical collection from Dacice
+[MZK03-TREBOVA]
+type = marc
+url = http://aleph.mzk.cz/OAI
+repository_name = MZK03-TREBOVA
+set = MZK03-TREBOVA
+metadataPrefix = marc21
+format = mzk
+idPrefix = MZK03-
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK
+dedup = true
+base = MZK03
+indexer_properties = mzk_marc.properties, marc.properties
+
+; norms
+[MZK04]
+type = marc
+url = http://aleph.mzk.cz/OAI
+repository_name = MZK04
+set = MZK04
+metadataPrefix = marc21
+format = mzk04
 idPrefix = MZK04-
 fileSplitter = AutoDetectFileSplitter.php
 recordTag = record
@@ -287,10 +382,10 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = MZK
 dedup = true
-language_mapping = mzk_language.map
-format_mapping = mzk_format.map
-category_txtF_mapping = conspectus_category.map
+base = MZK04
+indexer_properties = mzk_marc.properties, marc.properties
 
+;----------------- testing purposes -----------------
 [muni]
 type = marc
 url = http://aleph.mzk.cz/OAI
