marc mapping updated

--- a/marc_mapping/marc.properties
+++ b/marc_mapping/marc.properties
@@ -1,4 +1,4 @@
-id = 001, first
+id = custom, getID()
 lccn = 010a
 ctrlnum = 035a
 
@@ -40,7 +40,7 @@ contents = 505a:505t
 isbn = 020a
 issn = 022a:440x:490x:730x:776x:780x:785x
 
-callnumber = 910b
+callnumber_str_mv = 910b
      
 topic = 600:610:630:650
 genre = 655
