--- a/marc_mapping/mzk_marc.properties
+++ b/marc_mapping/mzk_marc.properties
@@ -11,7 +11,7 @@ mzk_visible_str = custom, getVisible()
 fulltext = custom, getFullText()
 topic = custom, getKeywords()
 relevancy_str = custom, getRelevancy()
-scale_int_mv = custom, getScale()
+#scale_int_mv = custom, getScale()
 callnumber_second_str_mv = custom, getSecondCallNumbers()
 geo = custom, getBoundingBox
 source = "MZK"
