publishDate_display field in Solr

--- a/marc_mapping/marc.properties
+++ b/marc_mapping/marc.properties
@@ -29,6 +29,7 @@ series = 440ap:800abcdfpqt:830ap
 series2 = 490a
 
 publisher = 260b
+publishDate_display = 260c, first
 publishDate = custom, getDate
 publishDateSort = custom, getDate
 
