cleanup of marc mapping

--- a/marc_mapping/marc.properties
+++ b/marc_mapping/marc.properties
@@ -7,7 +7,6 @@ recordtype = "mzk"
 allfields = custom, getAllFields()
 
 language = custom, getLanguages(), mzk_language_map.properties
-format = custom, getFormat
 format = custom, getFormat()
 
 author = 100abcd
@@ -30,8 +29,8 @@ series2 = 490a
 
 publisher = 260b
 publishDate_display = 260c, first
-publishDate = custom, getDate
-publishDateSort = custom, getDate
+publishDate = custom, getPublishDate()
+publishDateSort = custom, getPublishDateForSorting()
 
 physical = 300abcefg:530abcd
 dateSpan = 362a
@@ -54,8 +53,6 @@ geographic_facet = 600z:610z:611z:630z:648z:650z:651a:651z:655z
 url = 856u
 
 illustrated = script(illustrated.bsh), isIllustrated
-
-publishDate = 260c, first
 
 #deprecated
 title_display = 245abnp
