--- a/marc_mapping/mzk_marc.properties
+++ b/marc_mapping/mzk_marc.properties
@@ -4,7 +4,7 @@ format = custom, getFormat(), mzk_format_map.properties
 # is it used?
 publishDate_txt_mv = custom, getPublishDate()
 # TODO: make it copy field
-publishDate = script(second_run.bsh), getPublishDate
+publishDate = custom, getPublishDate()
 #itemlink = script(second_run.bsh), getItemLink
 title_short = custom, getTitleShort()
 mzk_visible_str = custom, getVisible()
@@ -13,7 +13,7 @@ topic = custom, getKeywords()
 relevancy_str = custom, getRelevancy()
 #scale_int_mv = custom, getScale()
 callnumber_second_str_mv = custom, getSecondCallNumbers()
-geo = custom, getBoundingBox
+#geo = custom, getBoundingBox()
 source = "MZK"
 nbn = 015a, first
 acq_int = custom, getAcquisitionDate()
