author, author_fuller and author-letter are single value field, so index only first occurence

--- a/marc_mapping/marc.properties
+++ b/marc_mapping/marc.properties
@@ -9,9 +9,9 @@ allfields = custom, getAllFields()
 language = custom, getLanguages(), mzk_language_map.properties
 format = custom, getFormat()
 
-author = 100abcd
-author_fuller = 100q
-author-letter = 100a
+author = 100abcd, first
+author_fuller = 100q, first
+author-letter = 100a, first
 author2 = 110ab:111ab:700abcd:710ab:711ab
 author2-role = 700e:710e
 author_additional = 505r
