edition is single value field, so index only first occurence

--- a/marc_mapping/marc.properties
+++ b/marc_mapping/marc.properties
@@ -34,7 +34,7 @@ publishDateSort = custom, getPublishDateForSorting()
 
 physical = 300abcefg:530abcd
 dateSpan = 362a
-edition = 250a
+edition = 250a, first
 contents = 505a:505t
 
 isbn = 020a
