--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -5,17 +5,20 @@
 [portal_mzk]
 type = marc
 url = http://aleph.mzk.cz/OAI
+set = MZK01-VDK
+base = MZK01
+metadataPrefix = marc21
 format = portal_mzk
 fileSplitter = AutoDetectFileSplitter.php
 recordXPath = //record
 oaiIDXPath = //record
 institution = MZK
-dedup = true
 idPrefix = mzk
+dedup = true
 language_mapping = mzk_language.map
 format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
-
+indexer_properties = mzk_marc.properties, marc.properties
 
 [portal_muni]
 type = marc
@@ -72,7 +75,6 @@ recordTag = record
 language_mapping = mzk_language.map
 format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
-
 ;----------------- VNF sources -----------------
 
 [vnf_mkp]
@@ -106,6 +108,8 @@ category_txtF_mapping = conspectus_category.map
 [vnf_mzk]
 type = marc
 url = http://aleph.mzk.cz/OAI
+set = MZK01-VDK
+metadataPrefix = marc21
 format = vnf_mzk
 fileSplitter = BinaryMarcFileSplitter.php
 recordXPath = //record
@@ -159,7 +163,7 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = VKOL
 dedup = true
-enableRecordCheck = false
+enableRecordCheck = true
 set = VKOLOAI
 metadataPrefix = marc21
 language_mapping = mzk_language.map
@@ -194,6 +198,18 @@ language_mapping = mzk_language.map
 format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_svkk]
+type = marc21
+format = vnf_svkk
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = SVKK
+dedup = true
+enableRecordCheck = false
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
@@ -205,7 +221,72 @@ oaiIDXPath = //record
 institution = MZK
 dedup = false
 metadataPrefix = marc21
-set = MZK03-CPK
+set = MZK03-VDK
+indexer_properties = mzk_marc.properties, marc.properties
+
+[hist_mzk_rajhrad]
+type = marc
+url = http://aleph.mzk.cz/OAI
+repository_name = MZK03-RAJHRAD
+set = MZK03-RAJHRAD
+metadataPrefix = marc21
+format = hist_mzk_rajhrad
+idPrefix = hist_mzk_raj
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK-RAJHRAD
+dedup = false
+indexer_properties = mzk_marc.properties, marc.properties
+
+[hist_mzk_dacice]
+type = marc
+url = http://aleph.mzk.cz/OAI
+repository_name = MZK03-DACICE
+set = MZK03-DACICE
+metadataPrefix = marc21
+format = hist_mzk_dacice
+idPrefix = hist_mzk_dac
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK-DACICE
+dedup=false
+indexer_properties = mzk_marc.properties, marc.properties
+
+[hist_mzk_znojmo]
+type = marc
+url = http://aleph.mzk.cz/OAI
+repository_name = MZK03-ZNOJMO
+set = MZK03-ZNOJMO
+metadataPrefix = marc21
+format = hist_mzk_znojmo
+idPrefix = hist_mzk_zno
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK-ZNOJMO
+dedup = false
+indexer_properties = mzk_marc.properties, marc.properties
+
+[hist_mzk_trebova]
+type = marc
+url = http://aleph.mzk.cz/OAI
+repository_name = MZK03-TREBOVA
+set = MZK03-TREBOVA
+metadataPrefix = marc21
+format = hist_mzk_trebova
+idPrefix = hist_mzk_tre
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK-TREBOVA
+dedup = false
+indexer_properties = mzk_marc.properties, marc.properties
 
 [hist_cbvk]
 type = marc
