EBSCO ebooks data source

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -499,6 +499,18 @@ dedup = true
 base = MZK04
 indexer_properties = mzk_marc.properties, marc.properties
 
+[MZK_EBSCO]
+type = marc21
+format = ebsco
+idPrefix = EBSCO-
+recordXPath = //record
+oaiIDXPath = //record
+institution = KNAV
+dedup = false
+enableRecordCheck = false
+fileSplitter = BinaryMarcFileSplitter.php
+indexer_properties = ebsco_marc.properties, marc.properties
+
 ;----------------- ncip2 integration tests ----------
 [mkt]
 type = marc
