--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -20,6 +20,24 @@ format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 indexer_properties = mzk_marc.properties, marc.properties
 
+[portal_mzk03]
+type = marc
+url = http://aleph.mzk.cz/OAI
+set = MZK03-VDK
+base = MZK03
+metadataPrefix = marc21
+format = portal_mzk
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK
+idPrefix = mzk03
+dedup = true
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
+indexer_properties = mzk_marc.properties, marc.properties
+
 [portal_muni]
 type = marc
 format = portal_muni
