mapping for EBSCO ebook records (format Ebook)

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -527,7 +527,8 @@ institution = KNAV
 dedup = false
 enableRecordCheck = false
 fileSplitter = BinaryMarcFileSplitter.php
-indexer_properties = ebsco_marc.properties, marc.properties
+format_mapping = mzk_format.map
+indexer_properties = marc.properties
 
 ;----------------- ncip2 integration tests ----------
 [mkt]
