support for EAN

--- a/marc_mapping/marc.properties
+++ b/marc_mapping/marc.properties
@@ -52,6 +52,8 @@ geographic_facet = 600z:610z:611z:630z:648z:650z:651a:651z:655z
 
 url = 856u
 
+ean_str_mv = custom, getEAN()
+
 illustrated = script(illustrated.bsh), isIllustrated
 
 #deprecated
