bounding box indexing

--- a/marc_mapping/marc.properties
+++ b/marc_mapping/marc.properties
@@ -56,5 +56,7 @@ ean_str_mv = custom, getEAN()
 
 illustrated = script(illustrated.bsh), isIllustrated
 
+bbox_geo = custom, getBoundingBox()
+
 #deprecated
 title_display = 245abnp
