--- a/marc_mapping/mzk_marc.properties
+++ b/marc_mapping/mzk_marc.properties
@@ -12,6 +12,7 @@ fulltext = custom, getFullText()
 topic = custom, getKeywords()
 relevancy_str = custom, getRelevancy()
 #scale_int_mv = custom, getScale()
+callnumber = 910b
 callnumber_second_str_mv = custom, getSecondCallNumbers()
 #geo = custom, getBoundingBox()
 source = "MZK"
