--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -45,6 +45,7 @@ dedup = true
 idPrefix = kjm
 url = http://katalog.kjm.cz/l.dll
 set = MZK
+metadataPrefix = marc21
 language_mapping = mzk_language.map
 format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
@@ -68,6 +69,7 @@ format = portal_mend
 fileSplitter = AutoDetectFileSplitter.php
 url = http://oai_provider.mendelu.cz/oai/index.php
 set = cpkb
+metadataPrefix = marc21
 recordXPath = //record
 oaiIDXPath = //record
 institution = MEND
@@ -363,6 +365,23 @@ type = marc
 url = http://aleph.mzk.cz/OAI
 repository_name = MZK01-VDK
 set = MZK01-VDK
+metadataPrefix = marc21
+format = mzk
+idPrefix = MZK01-
+fileSplitter = AutoDetectFileSplitter.php
+recordTag = record
+recordXPath = //record
+oaiIDXPath = //record
+institution = MZK
+dedup = true
+base = MZK01
+indexer_properties = mzk_marc.properties, marc.properties
+
+[MZKALL]
+type = marc
+url = http://aleph.mzk.cz/OAI
+repository_name = MZKALL
+set = MZKALL
 metadataPrefix = marc21
 format = mzk
 idPrefix = MZK01-
